--- a/pages/index.css
+++ b/pages/index.css
@@ -1,10 +1,120 @@
 .page {
   font-family: Inter, Arial, sans-serif;
-
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 16px;
   line-height: 20px;
   min-width: 1100px;
   max-width: 1600px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
+}
+
+.header {
+  padding: 30px 80px 40px;
+  height: 800px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+background-image: url(../images/background_header.svg);
+background-size: cover;
+}
+
+.header__image {
+  position: absolute;
+  top: 124px;
+  right: 5px;
+  width: 646px;
+  height: 568px;
+}
+
+.header__title {
+  margin: 0;
+  margin-top: 183px;
+  font-family: Inter, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 60px;
+  line-height: 72px;
+  letter-spacing: -0.6px;
+  max-width: 729px;
+}
+
+.header__span-accent {
+color: #3f96f3;
+display: block;
+}
+
+
+.header__description {
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-size: 20px;
+  line-height: 30px;
+  margin: 28px 0 0;
+  max-width: 683px;
+}
+
+.header__footer {
+  margin-top: auto;
+  display: flex;
+  justify-content: space-between;
+  /* TODO - Align adress to bottom of containter */
+}
+
+.header__paragraph{
+  margin: 0;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  font-family: "Inter";
+
+font-style: normal;
+
+font-weight: 500;
+
+font-size: 16px;
+
+line-height: 20px;
+
+}
+
+.nav__links {
+  display:flex;
+  list-style-type: none;
+gap: 20px;
+padding: 0;
+margin: 0;
+}
+
+.nav__logo {
+  position: relative;
+  left: -50px;
+}
+/* TODO style nav link fonts */
+
+.recipes{
+  Color: #fff;
+  background-color: #0a2750;
+  padding: 100px 80px 215px;
+}
+
+.recipes__title{
+margin: 0 0 24px;
+}
+
+.recipes__subtitle{
+margin: 0 0 80px;
+}
+
+.recipes__videos{
+  display: flex;
+  justify-content: center;
+  gap: 100px;
+  list-style-type: none;
+  margin: none;
+
+  .recipes__video-caption{
+    display: flex;
+    justify-content: space-between;
+  }
 }
