--- a/pages/index.css
+++ b/pages/index.css
@@ -6,6 +6,7 @@
   min-width: 1100px;
   max-width: 1600px;
   margin: auto;
+  background-color: #fff;
 }
 
 .header {
@@ -15,8 +16,8 @@
   display: flex;
   flex-direction: column;
   position: relative;
-background-image: url(../images/background_header.svg);
-background-size: cover;
+  background-image: url(../images/background_header.svg);
+  background-size: cover;
 }
 
 .header__image {
@@ -39,9 +40,15 @@ background-size: cover;
 }
 
 .header__span-accent {
-color: #3f96f3;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 60px;
+  line-height: 72px;
+  color: #3F96F3;
 display: block;
 }
+
 
 
 .header__description {
@@ -60,53 +67,80 @@ display: block;
 }
 
 .header__paragraph{
+  font-family: Inter, Arial, sans-serif;
   margin: 0;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #6f6f6f
 }
 
 .nav {
   display: flex;
   justify-content: space-between;
   font-family: "Inter";
-
-font-style: normal;
-
-font-weight: 500;
-
-font-size: 16px;
-
-line-height: 20px;
+ font-style: normal;
+ font-weight: 500;
+ font-size: 16px;
+ line-height: 20px;
 
 }
 
 .nav__links {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
   display:flex;
   list-style-type: none;
-gap: 20px;
-padding: 0;
-margin: 0;
+  gap: 20px;
+  padding: 0;
+  margin: 0;
 }
+
+.nav__link{
+    text-decoration: none;
+    color: #000;
+
+}
+
 
 .nav__logo {
   position: relative;
   left: -50px;
 }
-/* TODO style nav link fonts */
+
 
 .recipes{
+
   Color: #fff;
   background-color: #0a2750;
   padding: 100px 80px 215px;
 }
 
 .recipes__title{
-margin: 0 0 24px;
+  font-family: Inter, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+  margin: 0 0 24px;
 }
 
 .recipes__subtitle{
-margin: 0 0 80px;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-size: 20px;
+  line-height: 30px;
+  text-wrap: wrap;
+  margin: 0 0 80px;
 }
 
 .recipes__videos{
+  font-family: Inter, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
   display: flex;
   justify-content: center;
   gap: 100px;
