--- a/pages/index.css
+++ b/pages/index.css
@@ -152,3 +152,87 @@
 .recipes__iframe {
   border: none;
 }
+
+.form-input {
+  border: 1px solid #cfcfcf;
+}
+.reservation {
+  padding: 100px 0 120px;
+  background-image: url(../images/background_reservation.svg);
+  background-color: #d9e7ff;
+  background-size: cover;
+}
+
+.reservation__title {
+  font-family: "Inter", Arial, sans-serif;
+
+  font-weight: 500;
+
+  font-size: 44px;
+
+  line-height: 52px;
+  margin: 0 0 80px;
+  text-align: center;
+}
+
+.reservation__form {
+  margin: 0 auto;
+}
+.form {
+  max-width: 358px;
+}
+.form__fieldset {
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+.form__label {
+  font-family: "Inter", Arial, sans-serif;
+
+  font-weight: 500;
+
+  font-size: 16px;
+
+  line-height: 20px;
+}
+
+.form__input {
+  font-family: "Inter", Arial, sans-serif;
+  font-size: 20px;
+
+  line-height: 30px;
+  display: block;
+  width: 100%;
+  padding: 15px 20px;
+  box-sizing: border-box;
+  margin: 8px 0 32px;
+  border: 1px solid #838383;
+  border-radius: 4px;
+}
+.form__button {
+  font-family: "Inter", Arial, sans-serif;
+
+  font-weight: 500;
+
+  font-size: 16px;
+
+  line-height: 20px;
+  padding: 20px 0;
+  border: none;
+  width: 100%;
+  background-color: #1878dc;
+  color: #ffffff;
+  border-radius: 4px;
+  margin-bottom: 32px;
+}
+
+.form__checkbox {
+  border-radius: 2px;
+  width: 20px;
+  height: 20px;
+}
+.form__label_type_checkbox {
+  display: flex;
+  justify-content: center;
+  gap: 12px;
+}
