--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,4 +1,5 @@
 .header {
+  z-index: 1;
   padding: 30px 80px 40px;
   height: 800px;
   box-sizing: border-box;
@@ -10,6 +11,7 @@
 }
 
 .header__image {
+  z-index: -1;
   position: absolute;
   top: 124px;
   right: 5px;
@@ -47,6 +49,7 @@
 }
 
 .header__footer {
+  align-items: end;
   margin-top: auto;
   display: flex;
   justify-content: space-between;
