--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -27,20 +27,22 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 30px;
-  max-height: 273px;
-
   display: flex;
   justify-content: center;
   gap: 40px;
   list-style-type: none;
   margin: 0;
+  padding-left: 0;
 }
 
 .recipes__video-caption {
+  margin: 24px 0 0;
   display: flex;
   justify-content: space-between;
 }
 
 .recipes__iframe {
   border: none;
+  width: 480px;
+  height: 273px;
 }
